# bizsleuth

./: .gitignore  README.md  bizsleuth.py  estimate_revenue.py  find_bo.py  prompt.txt  pyproject.toml
