[project]
name = "business-owner-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crawl4ai>=0.7.7",
    "curl-cffi>=0.12.0",
    "dotenv>=0.9.9",
    "google-genai>=1.54.0",
    "html-text>=0.7.0",
    "openai>=1.96.1",
    "pandas>=2.3.1",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
]
